--- a/En/HeYueRule.html
+++ b/En/HeYueRule.html
@@ -6,52 +6,46 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
-    <title>Participate in the rules</title>
-    <link href="../Css/mobilemain.css" rel="stylesheet" />
+    <title>参与规则</title>
+    <link href="Css/mobilemain.css" rel="stylesheet" />
 </head>
 <body style="background-color:#f4f4f4;">
   <div class="wrap">
             <div class="main"><div class="staus_name"><span><a href="index.html">
-                        <img src="/Images/jt_left.png" height="20px" /></a></span>Participate in the rules
+                        <img src="Images/jt_left.png" height="20px" /></a></span>参与规则
                 </div>
-<div class="name_title">Contract ESCH28 day</div>
-
+<div class="name_title">ESCH28天合约</div>
 <div class="es_des">
-
-<h4 style="height:30px; line-height:30px;">Participate in the rules</h4>
-
-<div class="title_bg1">1. The participation amount is 2-20 ETH, and 2-10 ETH will be opened in the early stage. The 2-20 ETH will be opened according to the volume of the ETH. The monthly income rate is 18.9% - 27%, and the income rate could reach to 27% if you get to the limited holding amount of your account.<br />After seven days, 10% of the principal of the contract can be sold, ETH second to their own cold wallet; 
-
-<br />After 7 days, you can sell 10% of the contract principal, and the ETH will be sent to your own cold wallet immediately;
-<br />After 14 days, you can sell 20% of the contract principal, and the ETH will be sent to your own cold wallet immediately;
-<br />After 21 days, 65% of the contract principal can be sold, and the ETH will be sent to your own cold wallet immediately;
-<br />After 28 days, if you sell a total of 23.9% including 5% of the principal and 18.9% of the static interest and buy ETH that is equal to or more than the last contract, you will then enter the next cycle. Meanwhile, 23.9% of the selling will be sent to your own cold wallet.
-<br />Remark:
-
-<br />① One wallet is limited to one contract with 24 hours. You will get a yield of 0.9% in a full 24 hours and last for 21 days.
-<br />② 1% ESCH Token will be automatically taken as the fee for entering and exiting (for example, you will be charged for 100 Tokens for each investment in 10 ETH). The ESTH is purchased when completing the contrast. 1 ETH can exchange 100 ESTH. The exchange starts from 0.1 ETH. The ETH you used to purchase ESTH will be sent to the wallet and the fee to open a contrast is based on the value of ESTH. 
+<h4 style="height:30px; line-height:30px;">参与规则</h4>
+<div class="title_bg1">
+1、参与金额2-20个ETH，前期开放2-10个ETH.根据ETH的流量开放参与金额2-20。月收益18.9%--27%，满仓挂单收益27%； 
+<br />满7天后可卖出合约本金的10%，ETH秒到自己的冷钱包；  
+<br />满14天后可卖出合约本金的20%，ETH秒到自己的冷钱包；  
+<br />满21天后可卖出合约本金的65%，ETH秒到自己的冷钱包； 
+<br />满28天卖出合约剩余本金的5％及静态利息18.9％，总计23.9%，同时买入等于、大于上一次合约进入下一个周期，卖出合约的23.9%秒到自己的冷钱包。  
+<br />备注： 
+<br />①每个钱包24小时限制参与一个合约，满24小時收益0.9%，21天收益截止。
+<br />②进场、出场均自动扣除1% ESCH token代币作为手续费（例如投资10个ETH收取100个ESCH）。从合约购买ESCH ，1个ETH兑换1000 个ESCH ，起步0.1个ETH兑换。购买ESCH的ETH进入合约钱包。开启合约手续费根据ESCH的价值核算。 
 </div>
-
 <div class="title_bg2">
-2.  When the total amount of the contract pool decreases from high to low, equivalent value of ESCH will be distributed to you when the total amount of ETH reaches to 50000. 
-    
-</div>
+2、当合约池总量从高到低递减的时候，总量到50000个ETH发放部分等价值的ESCH。
+
+    </div>
+<div class="title_bg3">
+3、当以太坊总量到50万个ETH流水，投资收益在原基础收益上递减20%，即日收益0.72%   
+ </div>
+<div class="title_bg3">
+4、起投2-20个ETH，月收益15.12%---21.6%，满仓挂单收益21.6%  
+<br />满7天后可卖出合约本金的10%，ETH秒到自己的冷钱包； 
+<br />满14天后可卖出合约本金的20%，ETH秒到自己的冷钱包； 
+<br />满21天后可卖出合约本金的65%，ETH秒到自己的冷钱包； 
+<br />满28天卖出合约剩余本金的5％及静态利息15.12％，总计20.12%，同时买入等于、大于上一次合约进入下一个周期，卖出合约的20.12%秒到自己的冷钱包。  </div>
 
 <div class="title_bg3">
-3. When the total volume of ETH reaches 500000, the investment income decreases by 20% over the original basic income and income on that day is 0.72%.
-<br />4.Investing 1-20 ETH leads to a monthly income of 15.12% - 21.6%, and the income rate could reach to 21.6% if you get to the limited holding amount of your account.
-<br />After 7 days, you can sell 10% of the contract principal, and the ETH will be sent to your cold wallet immediately; 
-
-<br />After 14 days, you can sell 20% of the contract principal, and the ETH will be sent to your cold wallet immediately;
-<br />After 21 days, 65% of the contract principal can be sold, and the ETH will be sent to your cold wallet immediately;
-<br />After 28 days, if you sell a total of 20.12% including 5% of the principal and 15.12% of the static interest and buy ETH that is equal to or more than the last contract, you will then enter the next cycle. Meanwhile, 20.12% of the selling will be sent to your own cold wallet.
-</div>
-
-<div class="title_bg3">5. The growth of the user data and the expanding of the platform will launch diversified financial products for users to choose and to make their financial management.
-</div>
-        </div>        </div>
+        5、用户数据的增长及平台会推出不同收益及类型的理财产品供用户选择多元化理财。</div>
+                </div>
       </div>
-   
+    <script src="JS/FT_zh.js"></script>
 </body>
 </html>
 
