--- a/En/SQAndLY.html
+++ b/En/SQAndLY.html
@@ -6,34 +6,34 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no" />
-    <title>社区申请及留言</title>
-    <link href="Css/mobilemain.css" rel="stylesheet" />
+    <title>Community application and message</title>
+    <link href="../Css/mobilemain.css" rel="stylesheet" />
 </head>
 <body style="background-color:#f4f4f4;">
   <div class="wrap">
             <div class="main"><div class="staus_name"><span><a href="/index.html">
-                        <img src="Images/jt_left.png" height="20px" /></a></span>社区申请及留言
+                        <img src="../Images/jt_left.png" height="20px" /></a></span>Community application and message
                 </div>
-<div class="name_title">社区申请流程</div>
+<div class="name_title">Community application process</div>
 <div class="es_des">
 <h4 style="height:30px; line-height:30px;"></h4>
 <div class="title_bg1">
-尊敬的ESCH社区节点
+Dear ESCH Community Nodes:
 <br/>
-节点申请方案调整如下
+The adjustments of applying to open a Node are listed below
 <br/>
-    一、通过邮箱发邮件到eschsqjd@gmail.com
-<br />申请开启社区节点
-<br />ESCH社区节钱包地址： 
+   1. Send email to eschsqjd@gmail.com to apply for opening a node. 
+<br />The link of Community Node ESCH Wallet is:
+ 
 
 </div>
 <div class="title_bg2">
-二、通过考核的社区钱包向合约地址购买50000枚ESCH，技术方会把200000枚ESCH转入合约地址并且开启社区节点各项权益
+2. Purchase 50,000 ESCH through Community Wallet from Contract Link and the technical side will transfer 200,000 ESCH to the Contract Link and offer benefits for the Node. 
 <br/>
-参与申请社区节点的权益和责任
-<br/>1、推荐市场招募12人以上，开发和维护市场；
-<br/>2、1-5层业绩至少1000枚ETH；
-<br/>3、社区考核标准。150天后开始考核计划，1-5代ETH月流量3000，未达到考核标准将自动失效，不在享受社区效益，该节点不再有申请资格。
+Responsibilities and benefits for applying and opening a Node:
+<br/>1. To recruit at least 12 members and to develop and maintain the market. 
+<br/>2. At least 1,000 ESCH for performances at level 1-5. 
+<br/>3. Assess criteria. The assessment will begin in 150 days. 3,000 ETH of 1-5 generation per month is needed. Any Node that fails to achieve the criterial will result in the invalidation of the Node. No benefits will supply to the Node any more. The Node that fails the assessment will have no chance to apply again. 
     </div>
 
                 </div>
@@ -41,4 +41,3 @@
     <script src="JS/FT_zh.js"></script>
 </body>
 </html>
-
